Fix INSTALL section

--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,5 @@
 Thanks for downloading our package
 
-Installation:
-
-python setup.py install
+This project does not need installation
 
 For more detailed instructions see README.md
